# neuron

./: .gitignore  Cargo.toml  LICENSE  README.md  all_synergies.txt  build.rs  data_snake.py  match.redb  match_crawler.py  ml_analysis.py  player.redb  requirements.txt  stat_analysis.py
analysis/: ml_lib.py
analysis/comp_ml/: model.py  train_model.py
analysis/draft_ml/: model.py  train_model.py
analysis/draftml/: model.py  train_model.py
data_snake/: __init__.py  cli.py  compressed_json_ball.py  continent_crawler.py  continent_db.py  data_snake.py  encoded_puuid.py  league_arrow.py  main.py  match_id_coder.py  match_request_thread.py  match_scrape_thread.py  matches_json_analyzer.py  reqtimecalc.py  syn_db.py
lib/: __init__.py  encoded_champ_id.py  encoded_match_id.py  encoded_patch.py  encoded_rank.py  league_of_parquet.py
neuron/: __init__.py  cli.py  match_scrape_thread.py  syndb_analyzer.py
src/: batch_match_requester.rs  cli.rs  encoded_match_id.rs  encoded_puuid.rs  lib.rs  main.rs  packed_comp.rs  participant_combinations.rs  region_db.rs  utils.rs
