[package]
name = "neuron"
version = "0.3.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
riven = ">=2.50.0"

[[bin]]
name = "analyzer"


[dependencies]
# Database
redb = "~2.1"
# Riot API
riven = ">=2.51.0"
# Async
tokio = { version = "~1.37", features = ["rt", "macros", "signal"] }
# Error Handling
anyhow = "~1.0"
# CLI
clap = { version = "~4.5", features = ["default", "derive"] }
bytesize = "~1.3"
# Misc
base64 = "~0.22"

[dev-dependencies]
rand = "~0.8"