[package]
name = "neuron"
version = "0.3.1"
edition = "2021"
build = "build.rs"

[[bin]]
name = "analyzer"


[build-dependencies]
riven = ">=2.57.0"
regex = "~1.11"

[dependencies]
# Database
redb = "~2.2"
# Riot API
riven = ">=2.57"
# Async
tokio = { version = "~1.41", features = ["rt", "macros", "signal", "time"] }
# Error Handling
anyhow = "~1.0"
# CLI
clap = { version = "~4.5", features = ["default", "derive"] }
bytesize = "~1.3"
# Misc
base64 = "~0.22"

[dev-dependencies]
rand = "~0.8"